# wrf_procs_finder

./: README.md  number_of_procs.py  pyproject.toml  wrf-procs-finder  wrf_num_procs.py
examples/: namelist.input  namelist_3dom.input
src/wrf_procs_finder/: __init__.py  __main__.py  cli.py
