[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wrf-procs-finder"
version = "1.0.0"
description = "Determine valid processor counts for WRF simulations"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
keywords = ["WRF", "weather", "HPC", "processors", "domain decomposition"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]

[project.scripts]
wrf-procs-finder = "wrf_procs_finder.cli:main"

[project.urls]
Repository = "https://github.com/negin513/wrf-procs-finder"

[tool.setuptools.packages.find]
where = ["src"]
